--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="description" content="Mintech  IT Solutions &  Services Template">
   <link href="assets/images/favicon/favicon.png" rel="icon">
-  <title>Mintech IT Solutions & Services Template</title>
+  <title>Nextcycle</title>
 
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;700;800;900&family=Roboto:wght@400;700&display=swap">
@@ -210,52 +210,27 @@
             <div class="row">
               <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
                 <div class="slide-item__content">
-                  <h2 class="slide-item__title">Unlock Your <br> Full Technology Potentials!!</h2>
+                  <h2 class="slide-item__title">Bringing Together <br>Investors & Startups</h2>
                   <p class="slide-item__desc">We are experienced professionals who understand that It services is
                     changing,
                     and are true partners who care about your success. Our team provides a consultative approach on
                     emerging technology.</p>
                   <a href="projects-grid.html" class="btn btn__primary btn__primary-style2 btn__hi mr-30">Our
                     Services</a>
-                  <a class="video__btn video__btn-white popup-video" href="https://www.youtube.com/watch?v=nrJtHemSPW4">
+                  <a class="video__btn video__btn-white popup-video" href="https://www.youtube.com/watch?v=W1yrR3p-J5A">
                     <div class="video__player">
                       <span class="video__player-animation"></span>
                       <span class="video__player-animation video__player-animation-2"></span>
                       <i class="fa fa-play"></i>
                     </div>
-                    <span class="video__btn-title color-white">Play Video!</span>
+                    <span class="video__btn-title color-white">Find Out What We Stand For!</span>
                   </a>
                 </div><!-- /.slide-content -->
               </div><!-- /.col-xl-7 -->
             </div><!-- /.row -->
           </div><!-- /.container -->
         </div><!-- /.slide-item -->
-        <div class="slide-item align-v-h bg-overlay">
-          <div class="bg-img"><img src="assets/images/sliders/2.jpg" alt="slide img"></div>
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
-                <div class="slide-item__content">
-                  <h2 class="slide-item__title">Thinking Insights & Verified Driven Research Data!</h2>
-                  <p class="slide-item__desc">We are experienced professionals who understand that It services is
-                    changing,
-                    and are true partners who care about your success. Our team provides a consultative approach on
-                    emerging technology.</p>
-                  <a href="projects-grid.html" class="btn btn__primary btn__primary-style2 btn__hi mr-30">Our
-                    Services</a>
-                  <a class="video__btn video__btn-white popup-video" href="https://www.youtube.com/watch?v=nrJtHemSPW4">
-                    <div class="video__player">
-                      <span class="video__player-animation"></span>
-                      <span class="video__player-animation video__player-animation-2"></span>
-                      <i class="fa fa-play"></i>
-                    </div>
-                    <span class="video__btn-title color-white">Play Video!</span>
-                  </a>
-                </div><!-- /.slide-content -->
-              </div><!-- /.col-xl-7 -->
-            </div><!-- /.row -->
-          </div><!-- /.container -->
-        </div><!-- /.slide-item -->
+        
       </div><!-- /.carousel -->
     </section><!-- /.slider -->
 
