--- a/index.html
+++ b/index.html
@@ -211,9 +211,8 @@
               <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7">
                 <div class="slide-item__content">
                   <h2 class="slide-item__title">Bringing Together <br>Investors & Startups</h2>
-                  <p class="slide-item__desc">We are experienced professionals who understand that It services is
-                    changing,
-                    and are true partners who care about your success. Our team provides a consultative approach on
+                  <p class="slide-item__desc">We are experienced professionals who bring together investors and startups.
+                   We are true partners who care about success for everybody. Our team provides a consultative approach on
                     emerging technology.</p>
                   <a href="projects-grid.html" class="btn btn__primary btn__primary-style2 btn__hi mr-30">Our
                     Services</a>
