--- a/index.html
+++ b/index.html
@@ -600,17 +600,16 @@
 </div>
 <!-- /.wrapper -->
 
-
-    <div class="wrapper light-wrapper">
+    <div class="wrapper white-wrapper">
       <div class="container inner">
         <div class="row align-items-center">
           <div class="col-xl-6 pr-60 pr-lg-15">
-            <h2 class="title-color color-default">Our Services</h2>
-            <h3 class="display-3">The full service we are offering is specifically designed to meet your business needs.</h3>
+            <h2 class="title-color color-default">Our Focus Areas</h2>
+            <h3 class="display-3">The full service we are offering is specifically designed to your sustainable business area.</h3>
             <div class="space20"></div>
             <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio. Vestibulum id ligula porta felis euismod semper. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec sed odio dui.</p>
             <div class="space20"></div>
-            <a href="#" class="btn">More Details</a>
+            <a href="#" class="btn">Contact us</a>
           </div>
           <!--/column -->
           <div class="space50 d-none d-md-block d-xl-none"></div>
@@ -618,15 +617,15 @@
             <div class="row isotope">
               <div class="col-md-6 item grid-sizer">
                 <div class="box bg-white shadow shadow-hover">
-                  <div class="icon icon-svg mb-20"><img src="style/images/icons/hs-24-hours-1.png" alt=""></div>
-                  <h5>24/7 Support</h5>
+                  <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
+                  <h5>Next Mobility</h5>
                   <p>Nulla vitae elit libero pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
                 </div>
                 <!--/.box -->
                 <div class="space30"></div>
                 <div class="box bg-white shadow shadow-hover">
-                  <div class="icon icon-svg mb-20"><img src="style/images/icons/st-payment-method.png" alt=""></div>
-                  <h5>Secure Payments</h5>
+                  <div class="icon icon-svg mb-20"><img src="style/images/icons/ec-shopping-basket.png" alt=""></div>
+                  <h5>Next Food</h5>
                   <p>Nulla vitae elit libero pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
                 </div>
                 <!--/.box -->
@@ -635,15 +634,15 @@
               <div class="col-md-6 item grid-sizer">
                 <div class="space30 d-none d-md-block"></div>
                 <div class="box bg-white shadow shadow-hover">
-                  <div class="icon icon-svg mb-20"><img src="style/images/icons/ms-cloud-computing.png" alt=""></div>
-                  <h5>Daily Updates</h5>
+                  <div class="icon icon-svg mb-20"><img src="style/images/icons/de-invention.png" alt=""></div>
+                  <h5>Next Energy</h5>
                   <p>Nulla vitae elit libero pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
                 </div>
                 <!--/.box -->
                 <div class="space30"></div>
                 <div class="box bg-white shadow shadow-hover">
-                  <div class="icon icon-svg mb-20"><img src="style/images/icons/of-diagram.png" alt=""></div>
-                  <h5>Marketing Research</h5>
+                  <div class="icon icon-svg mb-20"><img src="style/images/icons/ui-house.png" alt=""></div>
+                  <h5>Next Living</h5>
                   <p>Nulla vitae elit libero pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
                 </div>
                 <!--/.box -->
