replace top index

--- a/index.html
+++ b/index.html
@@ -245,22 +245,80 @@
     </div>
     <!-- /.wrapper -->
 
-    <div class="wrapper gray-wrapper" id="the-cycles">
+    <div class="wrapper gray-wrapper">
       <div class="container inner">
         <div class="row">
           <div class="col-lg-8 offset-lg-2">
             <h2 class="section-title larger text-center">Welcome to NextCycle</h2>
             <div class="space30"></div>
-            <h1 class="display-4 text-center">Short summary about NextCycle. Donec id elit non mi porta gravida at eget metus. Sed posuere consectetur est at lobortis: innovation and investment.</h1>
+            <h1 class="display-4 text-center">We connect start-ups with experts to accelerate the next innovation cycle & attract private investors to realize te next investment cycle.</h1>
             <div class="space30"></div>
           </div>
           <!-- /column -->
         </div>
         <!-- /.row -->
 
+        <div class="space120" id="areas" ></div>
+            <div class="row align-items-center">
+              <div class="col-xl-6 pr-60 pr-lg-15">
+                <h2 class="title-color color-default">Our Focus Areas</h2>
+                <h3 class="display-3">The full service we are offering is specifically designed to your sustainable business area.</h3>
+                <div class="space20"></div>
+                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio. Vestibulum id ligula porta felis euismod semper. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec sed odio dui.</p>
+                <div class="space20"></div>
+                <a href="#" class="btn btn-aqua">Contact us</a>
+              </div>
+              <!--/column -->
+              <div class="space50 d-none d-md-block d-xl-none"></div>
+              <div class="col-xl-6 order-xl-2 text-center grid">
+                <div class="row isotope">
+                  <div class="col-md-6 item grid-sizer">
+                    <div class="box bg-white shadow shadow-hover">
+                      <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
+                      <h5>Next Mobility</h5>
+                      <p>Nulla vitae elit libero pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
+                    </div>
+                    <!--/.box -->
+                    <div class="space30"></div>
+                    <div class="box bg-white shadow shadow-hover">
+                      <div class="icon icon-svg mb-20"><img src="style/images/icons/ec-shopping-basket.png" alt=""></div>
+                      <h5>Next Food</h5>
+                      <p>Nulla vitae elit libero pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
+                    </div>
+                    <!--/.box -->
+                  </div>
+                  <!--/column -->
+                  <div class="col-md-6 item grid-sizer">
+                    <div class="space30 d-none d-md-block"></div>
+                    <div class="box bg-white shadow shadow-hover">
+                      <div class="icon icon-svg mb-20"><img src="style/images/icons/de-invention.png" alt=""></div>
+                      <h5>Next Energy</h5>
+                      <p>Nulla vitae elit libero pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
+                    </div>
+                    <!--/.box -->
+                    <div class="space30"></div>
+                    <div class="box bg-white shadow shadow-hover">
+                      <div class="icon icon-svg mb-20"><img src="style/images/icons/ui-house.png" alt=""></div>
+                      <h5>Next Living</h5>
+                      <p>Nulla vitae elit libero pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
+                    </div>
+                    <!--/.box -->
+                  </div>
+                  <!--/column -->
+                </div>
+                <!--/.row -->
+              </div>
+              <!--/column -->
+            </div>
+            <!--/.row -->
+          </div>
 
-   
-    <div class="space40" id="innovation"></div>
+
+
+
+        <div class="wrapper white-wrapper" id="the-cycles">
+          <div class="container inner"  id="innovation">
+
     <div class="row align-items-center">
       <div class="col-lg-6">
         <div class="img-blob blob3"><img src="style\images\nextcycle\innovation-cycle.jpg" style="width: 30rem" alt="" /></div>
@@ -309,68 +367,16 @@
 
 </div>
 <!-- /.container -->
+
+<div class="divider"><svg xmlns="http://www.w3.org/2000/svg" class="fill-light-wrapper" preserveAspectRatio="none" viewBox="0 0 1070 20.98">
+  <path d="M0,0V21H1070V0A6830.24,6830.24,0,0,1,0,0Z" /></svg></div>
     </div>
 <!-- /.wrapper -->
 
-    <div class="wrapper white-wrapper" id="areas">
-      <div class="container inner">
-        <div class="row align-items-center">
-          <div class="col-xl-6 pr-60 pr-lg-15">
-            <h2 class="title-color color-default">Our Focus Areas</h2>
-            <h3 class="display-3">The full service we are offering is specifically designed to your sustainable business area.</h3>
-            <div class="space20"></div>
-            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio. Vestibulum id ligula porta felis euismod semper. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec sed odio dui.</p>
-            <div class="space20"></div>
-            <a href="#" class="btn btn-aqua">Contact us</a>
-          </div>
-          <!--/column -->
-          <div class="space50 d-none d-md-block d-xl-none"></div>
-          <div class="col-xl-6 order-xl-2 text-center grid">
-            <div class="row isotope">
-              <div class="col-md-6 item grid-sizer">
-                <div class="box bg-white shadow shadow-hover">
-                  <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
-                  <h5>Next Mobility</h5>
-                  <p>Nulla vitae elit libero pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
-                </div>
-                <!--/.box -->
-                <div class="space30"></div>
-                <div class="box bg-white shadow shadow-hover">
-                  <div class="icon icon-svg mb-20"><img src="style/images/icons/ec-shopping-basket.png" alt=""></div>
-                  <h5>Next Food</h5>
-                  <p>Nulla vitae elit libero pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
-                </div>
-                <!--/.box -->
-              </div>
-              <!--/column -->
-              <div class="col-md-6 item grid-sizer">
-                <div class="space30 d-none d-md-block"></div>
-                <div class="box bg-white shadow shadow-hover">
-                  <div class="icon icon-svg mb-20"><img src="style/images/icons/de-invention.png" alt=""></div>
-                  <h5>Next Energy</h5>
-                  <p>Nulla vitae elit libero pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
-                </div>
-                <!--/.box -->
-                <div class="space30"></div>
-                <div class="box bg-white shadow shadow-hover">
-                  <div class="icon icon-svg mb-20"><img src="style/images/icons/ui-house.png" alt=""></div>
-                  <h5>Next Living</h5>
-                  <p>Nulla vitae elit libero pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
-                </div>
-                <!--/.box -->
-              </div>
-              <!--/column -->
-            </div>
-            <!--/.row -->
-          </div>
-          <!--/column -->
-        </div>
-        <!--/.row -->
-      </div>
-      <div class="divider"><svg xmlns="http://www.w3.org/2000/svg" class="fill-light-wrapper" preserveAspectRatio="none" viewBox="0 0 1070 20.98">
-        <path d="M0,0V21H1070V0A6830.24,6830.24,0,0,1,0,0Z" /></svg></div>
-  </div>
-    </div>
+</div>
+</div>
+
+    
 
 
         <div class="wrapper light-wrapper" id="how-we-work">
