--- a/index.html
+++ b/index.html
@@ -40,24 +40,28 @@
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a>
 
             </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#the-cycles">The cycles</a>
+
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="industries.html">Industries</a>
               <ul class="dropdown-menu">
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="#innovation">The Innovation Cycle</a>
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="industries.html#next-mobility">Next Mobility</a>
 
                 </li>
-                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="#investment">The Investment Cycle</a>
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="industries.html#next-energy">Next Energy</a>
+
+                </li>
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="industries.html#next-food">Next Food</a>
+
+                </li>
+                <li class="dropdown"><a class="dropdown-item dropdown-toggle" href="industries.html#next-living">Next Living</a>
 
                 </li>
 
               </ul>
             </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#areas">Focus Areas</a>
-              
-            </li>
-            <li class="nav-item"><a class="nav-link" href="#how-we-work">How we work</a>
+            <li class="nav-item"><a class="nav-link" href="community.html">Community</a>
              
             </li>
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#about-us">About us</a>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="about.html">About us</a>
 
             </li>
 
