about footer and menu

--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
       <div class="widget">
         <h3 class="widget-title">Learn More</h3>
         <ul class="list-unstyled">
-          <li><a href="#" class="nocolor">The Cycles</a></li>
-          <li><a href="#" class="nocolor">Focus Areas</a></li>
-          <li><a href="#" class="nocolor">How we Work</a></li>
+          <li><a href="#" class="nocolor">Industries</a></li>
+          <li><a href="#" class="nocolor">Community</a></li>
           <li><a href="#" class="nocolor">About Us</a></li>
         </ul>
       </div>
