--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <div class="space20"></div>
                 <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio. Vestibulum id ligula porta felis euismod semper. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec sed odio dui.</p>
                 <div class="space20"></div>
-                <a href="#" class="btn btn-aqua">Contact us</a>
+                <a href="#" class="btn btn-aqua">More info</a>
               </div>
               <!--/column -->
               <div class="space50 d-none d-md-block d-xl-none"></div>
@@ -280,6 +280,7 @@
                       <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
                       <h5>Next Mobility</h5>
                       <p>Nulla vitae elit libero pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
+                      <a href="#" class="btn btn-s btn-aqua">Read More</a>
                     </div>
                     <!--/.box -->
                     <div class="space30"></div>
@@ -287,7 +288,8 @@
                       <div class="icon icon-svg mb-20"><img src="style/images/icons/ec-shopping-basket.png" alt=""></div>
                       <h5>Next Food</h5>
                       <p>Nulla vitae elit libero pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
-                    </div>
+                    
+                      <a href="#" class="btn btn-s btn-aqua">Read More</a></div>
                     <!--/.box -->
                   </div>
                   <!--/column -->
@@ -297,6 +299,7 @@
                       <div class="icon icon-svg mb-20"><img src="style/images/icons/de-invention.png" alt=""></div>
                       <h5>Next Energy</h5>
                       <p>Nulla vitae elit libero pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
+                      <a href="#" class="btn btn-s btn-aqua">Read More</a>
                     </div>
                     <!--/.box -->
                     <div class="space30"></div>
@@ -304,6 +307,7 @@
                       <div class="icon icon-svg mb-20"><img src="style/images/icons/ui-house.png" alt=""></div>
                       <h5>Next Living</h5>
                       <p>Nulla vitae elit libero pharetra augue. Donec id elit non mi porta gravida at eget metus.</p>
+                      <a href="#" class="btn btn-s btn-aqua">Read More</a>
                     </div>
                     <!--/.box -->
                   </div>
