added the coaches

--- a/about.html
+++ b/about.html
@@ -241,7 +241,7 @@
             <figure class="img-blob blob1 mb-25"><img src="style/images/art/te2.jpg" style="width: 15rem" alt="" /></figure>
             <h4 class="mb-15">Cato Bui</h4>
             <div class="meta mb-5">Google, Agency Strategist & Startup Lead</div>
-            <p>‘Improve your branding with a digital strategy’</p>
+            <p>‘Improve your branding with a digital strategy’</p></br>
             <ul class="social social-s ml-auto">
               <li><a href="https://www.linkedin.com/in/catobui/" target="_blank"><i class="jam jam-linkedin"></i></a></li>
             </ul>
@@ -249,88 +249,72 @@
           <!--/column -->
           <div class="col-md-4">
             <figure class="img-blob blob1 mb-25"><img src="style/images/art/te3.jpg" style="width: 15rem" alt="" /></figure>
-            <h4 class="mb-15">Barclay Widerski</h4>
-            <div class="meta mb-5">Sales Manager</div>
+            <h4 class="mb-15">Jordi van den Bussche
+            </h4>
+            <div class="meta mb-5">Nr. 1 Youtuber in The Netherlands
+            </div>
+            <p>‘Social Media xx
+            </p></br>
             <ul class="social social-s ml-auto">
-              <li><a href="#"><i class="jam jam-linkedin"></i></a></li>
-              <li><a href="#"><i class="jam jam-facebook"></i></a></li>
-              <li><a href="#"><i class="jam jam-instagram"></i></a></li>
+              <li><a href="https://www.youtube.com/user/kwebbelkop?hl=nl&gl=NL" target="_blank"><i class="jam jam-youtube"></i></a></li>
             </ul>
           </div>
           <!--/column -->
         </div>
         <!--/.row -->
 
-        <div class="space40"></div>
+        <div class="space60"></div>
         <div class="row text-center">
           <div class="col-md-4">
             <figure class="img-blob blob1 mb-25"><img src="style/images/art/te1.jpg" style="width: 15rem" alt="" /></figure>
-            <h4 class="mb-15">John de Kok</h4>
-            <div class="meta mb-5">CEO, Technobis Group</div>
+            <h4 class="mb-15">Wouter Truffino
+            </h4>
+            <div class="meta mb-5">Ceo, Holland Proptech & Contech
+            </div>
+            <p>xx</p></br>
             <ul class="social social-s ml-auto">
-              <li><a href="#"><i class="jam jam-linkedin"></i></a></li>
-              <li><a href="#"><i class="jam jam-facebook"></i></a></li>
-              <li><a href="#"><i class="jam jam-instagram"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/woutertruffino/" target="_blank"><i class="jam jam-linkedin"></i></a></li>
             </ul>
           </div>
           <!--/column -->
           <div class="col-md-4">
             <figure class="img-blob blob1 mb-25"><img src="style/images/art/te2.jpg" style="width: 15rem" alt="" /></figure>
-            <h4 class="mb-15">Coriss Ambady</h4>
-            <div class="meta mb-5">Marketing Specialist</div>
+            <h4 class="mb-15">Jordy van Egmond</h4>
+            <div class="meta mb-5">No. 27 DJ Mag Top 100 DJs list (2014)
+            </div>
+            <p>xx</p></br>
             <ul class="social social-s ml-auto">
-              <li><a href="#"><i class="jam jam-linkedin"></i></a></li>
-              <li><a href="#"><i class="jam jam-facebook"></i></a></li>
-              <li><a href="#"><i class="jam jam-instagram"></i></a></li>
+              <li><a href="http://aceagency.com/images/factsheets/dyro/dyro.html" target="_blank"><i class="icofont-link"></i></a></li>
             </ul>
           </div>
           <!--/column -->
           <div class="col-md-4">
             <figure class="img-blob blob1 mb-25"><img src="style/images/art/te3.jpg" style="width: 15rem" alt="" /></figure>
-            <h4 class="mb-15">Barclay Widerski</h4>
-            <div class="meta mb-5">Sales Manager</div>
+            <h4 class="mb-15">Dr. Ing. Ravish Mehairjan
+
+            </h4>
+            <div class="meta mb-5">Ceo, Value Connect
+            </div>
+            <p>‘Helping companies with Qonnecting Value through management + consulting services’
+            </p>
             <ul class="social social-s ml-auto">
-              <li><a href="#"><i class="jam jam-linkedin"></i></a></li>
-              <li><a href="#"><i class="jam jam-facebook"></i></a></li>
-              <li><a href="#"><i class="jam jam-instagram"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/ravishmehairjan/" target="_blank"><i class="jam jam-linkedin"></i></a></li>
             </ul>
           </div>
           <!--/column -->
         </div>
         <!--/.row -->
 
-        <div class="space40"></div>
+        <div class="space60"></div>
         <div class="row text-center">
           <div class="col-md-4">
             <figure class="img-blob blob1 mb-25"><img src="style/images/art/te1.jpg" style="width: 15rem" alt="" /></figure>
-            <h4 class="mb-15">Connor Gibson</h4>
-            <div class="meta mb-5">Financial Analyst</div>
+            <h4 class="mb-15">Laurens van Roomen</h4>
+            <div class="meta mb-5">CEO & Entrepreneur</div>
+            <p>xx</p></br>
             <ul class="social social-s ml-auto">
-              <li><a href="#"><i class="jam jam-linkedin"></i></a></li>
-              <li><a href="#"><i class="jam jam-facebook"></i></a></li>
-              <li><a href="#"><i class="jam jam-instagram"></i></a></li>
-            </ul>
-          </div>
-          <!--/column -->
-          <div class="col-md-4">
-            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te2.jpg" style="width: 15rem" alt="" /></figure>
-            <h4 class="mb-15">Coriss Ambady</h4>
-            <div class="meta mb-5">Marketing Specialist</div>
-            <ul class="social social-s ml-auto">
-              <li><a href="#"><i class="jam jam-linkedin"></i></a></li>
-              <li><a href="#"><i class="jam jam-facebook"></i></a></li>
-              <li><a href="#"><i class="jam jam-instagram"></i></a></li>
-            </ul>
-          </div>
-          <!--/column -->
-          <div class="col-md-4">
-            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te3.jpg" style="width: 15rem" alt="" /></figure>
-            <h4 class="mb-15">Barclay Widerski</h4>
-            <div class="meta mb-5">Sales Manager</div>
-            <ul class="social social-s ml-auto">
-              <li><a href="#"><i class="jam jam-linkedin"></i></a></li>
-              <li><a href="#"><i class="jam jam-facebook"></i></a></li>
-              <li><a href="#"><i class="jam jam-instagram"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/laurens-van-roomen-43564656" target="_blank"><i class="jam jam-linkedin"></i></a></li>
+              <li><a href="https://www.laurensvanroomen.nl" target="_blank"><i class="icofont-link"></i></a></li>
             </ul>
           </div>
           <!--/column -->
