--- a/about.html
+++ b/about.html
@@ -318,6 +318,18 @@
             </ul>
           </div>
           <!--/column -->
+          <div class="col-md-4">
+            <figure class="img-blob blob1 mb-25"><img src="style/images/art/te1.jpg" style="width: 15rem" alt="" /></figure>
+            <h4 class="mb-15">Soufiane Bouarfa
+            </h4>
+            <div class="meta mb-5">Entrepreneur Future of Mobility</div>
+            <p>xx</p></br>
+            <ul class="social social-s ml-auto">
+              <li><a href="https://www.linkedin.com/in/soufianebouarfa" target="_blank"><i class="jam jam-linkedin"></i></a></li>
+            </ul>
+          </div>
+          <!--/column -->
+          
         </div>
         <!--/.row -->
 
