new focus areas index.html

--- a/services5.html
+++ b/services5.html
@@ -404,7 +404,7 @@
     <div class="wrapper overflow-top">
       <div class="container inner pt-0">
         <div class="row text-center">
-          <div class="col-md-6 col-lg-4">
+          <div class="col-md-6 col-lg-3">
             <div class="box bg-white shadow">
               <div class="icon icon-svg mb-20"><img src="style/images/icons/hs-24-hours-1.png" alt=""></div>
               <h5>24/7 Support</h5>
@@ -413,7 +413,7 @@
             <!--/.box -->
           </div>
           <!--/column -->
-          <div class="col-md-6 col-lg-4">
+          <div class="col-md-6 col-lg-3">
             <div class="box bg-white shadow">
               <div class="icon icon-svg mb-20"><img src="style/images/icons/st-payment-method.png" alt=""></div>
               <h5>Secure Payments</h5>
@@ -422,8 +422,19 @@
             <!--/.box -->
           </div>
           <!--/column -->
+          
           <div class="space30 d-none d-md-block d-lg-none"></div>
-          <div class="col-md-6 col-lg-4">
+          <div class="col-md-6 col-lg-3">
+            <div class="box bg-white shadow">
+              <div class="icon icon-svg mb-20"><img src="style/images/icons/ms-cloud-computing.png" alt=""></div>
+              <h5>Daily Updates</h5>
+              <p>Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Cras justo odio. Cum sociis natoque penatibus magnis dis.</p>
+            </div>
+            <!--/.box -->
+          </div>
+          <!--/column -->
+          <div class="space30 d-none d-md-block d-lg-none"></div>
+          <div class="col-md-6 col-lg-3">
             <div class="box bg-white shadow">
               <div class="icon icon-svg mb-20"><img src="style/images/icons/ms-cloud-computing.png" alt=""></div>
               <h5>Daily Updates</h5>
