communicty part index.html

--- a/index.html
+++ b/index.html
@@ -294,17 +294,109 @@
               </div>
               <!-- /.row -->
               <div class="space80"></div>
-              <div class="carousel owl-carousel clients" data-margin="30" data-loop="true" data-dots="false" data-autoplay="true" data-autoplay-timeout="3000" data-responsive='{"0":{"items": "2"}, "768":{"items": "4"}, "992":{"items": "5"}, "1140":{"items": "6"}}'>
-                <div class="item pl-15 pr-15"><img src="style/images/art/z1.svg" alt="" /></div>
-                <div class="item pl-15 pr-15"><img src="style/images/art/z2.svg" alt="" /></div>
-                <div class="item pl-15 pr-15"><img src="style/images/art/z3.svg" alt="" /></div>
-                <div class="item pl-15 pr-15"><img src="style/images/art/z4.svg" alt="" /></div>
-                <div class="item pl-15 pr-15"><img src="style/images/art/z5.svg" alt="" /></div>
-                <div class="item pl-15 pr-15"><img src="style/images/art/z6.svg" alt="" /></div>
-                <div class="item pl-15 pr-15"><img src="style/images/art/z7.svg" alt="" /></div>
-                <div class="item pl-15 pr-15"><img src="style/images/art/z8.svg" alt="" /></div>
-              </div>
-              <!-- /.owl-carousel -->
+                  <div class="grid-view">
+                    <div class="carousel owl-carousel gap-small text-center" data-margin="0" data-loop="true" data-dots="true" data-autoplay="true" data-autoplay-timeout="5000" data-responsive='{"0":{"items": "1"}, "768":{"items": "2"}, "1024":{"items": "3"}, "1440":{"items": "4"}}'>
+                      <div class="item">
+                        <div class="item-inner">
+                          <div class="box bg-white shadow">
+                            <div class="img-blob blob1 mb-20"><img src="style/images/art/z1.svg" style="width: 7rem" alt="" /></div>
+                            <h5 class="mb-15">Zerf</h5>
+                            <div class="meta mb-10">Next Mobility</div>
+                            <p class="mb-10">Pellentesque ornare sem lacinia quam venenatis.</p>
+                            <ul class="social social-s ml-auto mb-10">
+                              <li><a href="#"><i class="icofont-link"></i></a></li>
+                            </ul>
+                          </div>
+                          <!--/.box -->
+                        </div>
+                        <!--/.item-inner -->
+                      </div>
+                      <!--/.item -->
+                      <div class="item">
+                        <div class="item-inner">
+                          <div class="box bg-white shadow">
+                            <div class="img-blob blob1 mb-20"><img src="style/images/art/z2.svg" style="width: 7rem" alt="" /></div>
+                            <h5 class="mb-15">Pizza House</h5>
+                            <div class="meta mb-10">Next Food</div>
+                            <p class="mb-10">Pellentesque ornare sem lacinia quam venenatis.</p>
+                            <ul class="social social-s ml-auto mb-10">
+                              <li><a href="#"><i class="icofont-link"></i></a></li>
+                            </ul>
+                          </div>
+                          <!--/.box -->
+                        </div>
+                        <!--/.item-inner -->
+                      </div>
+                      <!--/.item -->
+                      <div class="item">
+                        <div class="item-inner">
+                          <div class="box bg-white shadow">
+                            <div class="img-blob blob1 mb-20"><img src="style/images/art/z3.svg" style="width: 7rem" alt="" /></div>
+                            <h5 class="mb-15">Co City</h5>
+                            <div class="meta mb-10">Next Living</div>
+                            <p class="mb-10">Pellentesque ornare sem lacinia quam venenatis.</p>
+                            <ul class="social social-s ml-auto mb-10">
+                              <li><a href="#"><i class="icofont-link"></i></a></li>
+                            </ul>
+                          </div>
+                          <!--/.box -->
+                        </div>
+                        <!--/.item-inner -->
+                      </div>
+                      <!--/.item -->
+                      <div class="item">
+                        <div class="item-inner">
+                          <div class="box bg-white shadow">
+                            <div class="img-blob blob1 mb-20"><img src="style/images/art/z4.svg" style="width: 7rem" alt="" /></div>
+                            <h5 class="mb-15">Great</h5>
+                            <div class="meta mb-10">Next Energy</div>
+                            <p class="mb-10">Pellentesque ornare sem lacinia quam venenatis.</p>
+                            <ul class="social social-s ml-auto mb-10">
+                              <li><a href="#"><i class="icofont-link"></i></a></li>
+                            </ul>
+                          </div>
+                          <!--/.box -->
+                        </div>
+                        <!--/.item-inner -->
+                      </div>
+                      <!--/.item -->
+                      <div class="item">
+                        <div class="item-inner">
+                          <div class="box bg-white shadow">
+                            <div class="img-blob blob1 mb-20"><img src="style/images/art/z5.svg" style="width: 7rem" alt="" /></div>
+                            <h5 class="mb-15">Troinc</h5>
+                            <div class="meta mb-10">Next Food</div>
+                            <p class="mb-10">Pellentesque ornare sem lacinia quam venenatis.</p>
+                            <ul class="social social-s ml-auto mb-10">
+                              <li><a href="#"><i class="icofont-link"></i></a></li>
+                            </ul>
+                          </div>
+                          <!--/.box -->
+                        </div>
+                        <!--/.item-inner -->
+                      </div>
+                      <!--/.item -->
+                      <div class="item">
+                        <div class="item-inner">
+                          <div class="box bg-white shadow">
+                            <div class="img-blob blob1 mb-20"><img src="style/images/art/z6.svg" style="width: 7rem" alt="" /></div>
+                            <h5 class="mb-15">Hidden Valley</h5>
+                            <div class="meta mb-10">Next Energy</div>
+                            <p class="mb-10">Pellentesque ornare sem lacinia quam venenatis.</p>
+                            <ul class="social social-s ml-auto mb-10">
+                              <li><a href="#"><i class="icofont-link"></i></a></li>
+                            </ul>
+                          </div>
+                          <!--/.box -->
+                        </div>
+                        <!--/.item-inner -->
+                      </div>
+                      <!--/.item -->
+                    </div>
+                    <!-- /.owl-carousel -->
+                  </div>
+                  <!-- /.grid-view -->
+
 
 
             </div>
