--- a/team.html
+++ b/team.html
@@ -589,7 +589,7 @@
       <div class="container inner">
         <h2 class="section-title text-center">Team Box Carousel</h2>
         <div class="grid-view">
-          <div class="carousel owl-carousel gap-small text-center" data-margin="0" data-dots="true" data-autoplay="false" data-autoplay-timeout="5000" data-responsive='{"0":{"items": "1"}, "768":{"items": "2"}, "1024":{"items": "3"}, "1440":{"items": "4"}}'>
+          <div class="carousel owl-carousel gap-small text-center" data-margin="0" data-loop="true" data-dots="true" data-autoplay="true" data-autoplay-timeout="5000" data-responsive='{"0":{"items": "1"}, "768":{"items": "2"}, "1024":{"items": "3"}, "1440":{"items": "4"}}'>
             <div class="item">
               <div class="item-inner">
                 <div class="box bg-white shadow">
