--- a/services2.html
+++ b/services2.html
@@ -650,7 +650,7 @@
           <div class="col-lg-7">
             <div class="pricing-wrapper">
               <div class="row no-gutters">
-                <div class="col-md-6 popular">
+                <div class="col-md-4">
                   <div class="pricing panel box bg-white shadow">
                     <div class="panel-heading">
                       <div class="prices color-dark">
@@ -688,7 +688,7 @@
                   <!--/.pricing -->
                 </div>
                 <!--/column -->
-                <div class="col-md-6">
+                <div class="col-md-4 popular">
                   <div class="pricing panel box bg-white shadow">
                     <div class="panel-heading">
                       <div class="prices color-dark">
@@ -726,6 +726,47 @@
                   <!--/.pricing -->
                 </div>
                 <!--/column -->
+
+                <div class="col-md-4">
+                  <div class="pricing panel box bg-white shadow">
+                    <div class="panel-heading">
+                      <div class="prices color-dark">
+                        <div class="price price-show"><span class="price-currency">$</span><span class="price-value">19</span> <span class="price-duration">month</span></div>
+                        <div class="price price-hide price-hidden"><span class="price-currency">$</span><span class="price-value">199</span> <span class="price-duration">year</span></div>
+                      </div>
+                      <h4 class="panel-title mb-0">Premium Plan</h4>
+                    </div>
+                    <!--/.panel-heading -->
+                    <div class="panel-body">
+                      <table class="table">
+                        <tr>
+                          <td><strong>5</strong> Projects </td>
+                        </tr>
+                        <tr>
+                          <td><strong>100K</strong> API Access </td>
+                        </tr>
+                        <tr>
+                          <td><strong>200MB</strong> Storage </td>
+                        </tr>
+                        <tr>
+                          <td> Custom <strong>Cloud</strong> Services </td>
+                        </tr>
+                        <tr>
+                          <td> Weekly <strong>Reports</strong></td>
+                        </tr>
+                        <tr>
+                          <td> 7/24 <strong>Support</strong></td>
+                        </tr>
+                      </table>
+                    </div>
+                    <!--/.panel-body -->
+                    <div class="panel-footer"> <a href="#" class="btn" role="button">Choose Plan</a></div>
+                  </div>
+                  <!--/.pricing -->
+                </div>
+                <!--/column -->
+
+
               </div>
               <!--/.row -->
             </div>
