--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
   <div class="image-block-wrapper">
     <div class="image-block col-lg-6 p-0">
-      <div class="image-block-bg bg-image" data-image-src="style/images/art/about2.jpg"></div>
+      <div class="image-block-bg bg-image" data-image-src="style/images/nextcycle/brainstorming.jpg"></div>
     </div>
     <!--/.image-block -->
     <div class="container" id="innovation">
@@ -223,7 +223,7 @@
 <div class="wrapper gray-wrapper">
   <div class="image-block-wrapper">
     <div class="image-block col-lg-6 offset-lg-6 p-0">
-      <div class="image-block-bg bg-image" data-image-src="style/images/art/about3.jpg"></div>
+      <div class="image-block-bg bg-image" data-image-src="style/images/nextcycle/toasting.jpg"></div>
     </div>
     <!--/.image-block -->
     <div class="container" id="investment">
