--- a/index.html
+++ b/index.html
@@ -401,6 +401,8 @@
 
             </div>
             <!-- /.container -->
+            <div class="divider"><svg xmlns="http://www.w3.org/2000/svg" class="fill-light-wrapper" preserveAspectRatio="none" viewBox="0 0 1070 20.98">
+  <path d="M0,0V21H1070V0A6830.24,6830.24,0,0,1,0,0Z" /></svg></div>
           </div>
           <!-- /.wrapper -->
           <div class="space20"></div>
@@ -422,7 +424,7 @@
             <div class="row">
               <div class="col-lg-5 pr-50 pr-md-15">
                 <h2 class="title-color color-gray">Our Services</h2>
-                <h3 class="display-3">We offer great prices, premium products and quality service for your business.</h3>
+                <h3 class="display-3">A small heading text that puts down the core things regarding the service we offer.</h3>
                 <div class="space20"></div>
                 <p>Nulla vitae elit libero, a pharetra augue. Donec ullamcorper nulla non metus auctor fringilla. Maecenas sed diam eget risus varius blandit sit amet non magna. Nulla vitae elit libero, a pharetra augue. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
                 <div class="space10"></div>
@@ -440,6 +442,8 @@
                           <div class="prices color-dark">
                             <!-- <div class="price price-show"><span class="price-currency">$</span><span class="price-value">9</span> <span class="price-duration">month</span></div>
                             <div class="price price-hide price-hidden"><span class="price-currency">$</span><span class="price-value">99</span> <span class="price-duration">year</span></div> -->
+
+                            <div class="icon icon-svg mb-20"><img src="style/images/icons/sm-management.png" alt=""></div>
                           </div>
                           <h4 class="panel-title mb-0">Connect</h4>
                         </div>
@@ -447,37 +451,32 @@
                         <div class="panel-body">
                           <table class="table">
                             <tr>
-                              <td><strong>1</strong> Project </td>
+                              <td><strong>Access</strong> to Coaching </td>
                             </tr>
                             <tr>
-                              <td><strong>100K</strong> API Access </td>
+                              <td><strong>Join</strong> Community </td>
                             </tr>
                             <tr>
-                              <td><strong>100MB</strong> Storage </td>
+                              <td><strong>Participate</strong> Events </td>
                             </tr>
-                            <tr>
-                              <td> Custom <strong>Cloud</strong> Services </td>
-                            </tr>
-                            <tr>
-                              <td> Weekly <strong>Reports</strong></td>
-                            </tr>
-                            <tr>
-                              <td> 7/24 <strong>Support</strong></td>
-                            </tr>
+
+
+
                           </table>
                         </div>
                         <!--/.panel-body -->
-                        <div class="panel-footer"> <a href="#" class="btn" role="button">Choose Plan</a></div>
+                        <div class="panel-footer"> <a href="#" class="btn" role="button">Contact Us</a></div>
                       </div>
                       <!--/.pricing -->
                     </div>
                     <!--/column -->
-                    <div class="col-md-4 popular">
+                    <div class="col-md-4">
                       <div class="pricing panel box bg-white shadow">
                         <div class="panel-heading">
                           <div class="prices color-dark">
                             <!-- <div class="price price-show"><span class="price-currency">$</span><span class="price-value">19</span> <span class="price-duration">month</span></div>
                             <div class="price price-hide price-hidden"><span class="price-currency">$</span><span class="price-value">199</span> <span class="price-duration">year</span></div> -->
+                            <div class="icon icon-svg mb-20"><img src="style/images/icons/st-startup.png" alt=""></div>
                           </div>
                           <h4 class="panel-title mb-0">Accelerate</h4>
                         </div>
@@ -485,38 +484,33 @@
                         <div class="panel-body">
                           <table class="table">
                             <tr>
-                              <td><strong>5</strong> Projects </td>
+                              <td><strong>Active</strong> Coaching </td>
                             </tr>
                             <tr>
-                              <td><strong>100K</strong> API Access </td>
+                              <td><strong>5 year</strong> plan development </td>
                             </tr>
                             <tr>
-                              <td><strong>200MB</strong> Storage </td>
+                              <td><strong>Monthly</strong> Feedback </td>
                             </tr>
-                            <tr>
-                              <td> Custom <strong>Cloud</strong> Services </td>
-                            </tr>
-                            <tr>
-                              <td> Weekly <strong>Reports</strong></td>
-                            </tr>
-                            <tr>
-                              <td> 7/24 <strong>Support</strong></td>
-                            </tr>
+
+
+
                           </table>
                         </div>
                         <!--/.panel-body -->
-                        <div class="panel-footer"> <a href="#" class="btn" role="button">Choose Plan</a></div>
+                        <div class="panel-footer"> <a href="#" class="btn" role="button">Contact Us</a></div>
                       </div>
                       <!--/.pricing -->
                     </div>
                     <!--/column -->
     
-                    <div class="col-md-4">
+                    <div class="col-md-4 popular">
                       <div class="pricing panel box bg-white shadow">
                         <div class="panel-heading">
                           <div class="prices color-dark">
                             <!-- <div class="price price-show"><span class="price-currency">$</span><span class="price-value">19</span> <span class="price-duration">month</span></div>
                             <div class="price price-hide price-hidden"><span class="price-currency">$</span><span class="price-value">199</span> <span class="price-duration">year</span></div> -->
+                            <div class="icon icon-svg mb-20"><img src="style/images/icons/st-handshake.png" alt=""></div>
                           </div>
                           <h4 class="panel-title mb-0">Invest</h4>
                         </div>
@@ -524,16 +518,16 @@
                         <div class="panel-body">
                           <table class="table">
                             <tr>
-                              <td><strong>5</strong> Projects </td>
+                              <td><strong>Connect</strong> Investors </td>
                             </tr>
                             <tr>
-                              <td><strong>100K</strong> API Access </td>
+                              <td><strong>Manage</strong> Investments </td>
                             </tr>
                             <tr>
-                              <td><strong>200MB</strong> Storage </td>
+                              <td><strong>Report</strong> to Investors </td>
                             </tr>
                             <tr>
-                              <td> Custom <strong>Cloud</strong> Services </td>
+                              <td><strong>Active</strong> Coaching </td>
                             </tr>
                             <tr>
                               <td> Weekly <strong>Reports</strong></td>
@@ -544,7 +538,7 @@
                           </table>
                         </div>
                         <!--/.panel-body -->
-                        <div class="panel-footer"> <a href="#" class="btn" role="button">Choose Plan</a></div>
+                        <div class="panel-footer"> <a href="#" class="btn" role="button">Contact Us</a></div>
                       </div>
                       <!--/.pricing -->
                     </div>
@@ -572,6 +566,7 @@
       <div class="container inner pt-80 pb-80">
         <div class="widget"> <img src="#" srcset="style\images\nextcycle\logo-light.png 1x, style\images\nextcycle\logo-light@2x.png 2x" alt="" />
           <div class="space30"></div>
+          <p><a href="mailto:info@nextcycle.com" class="nocolor">info@nextcycle.com</a></p>
           <p>© 2020 NextCycle. All rights reserved.</p>
           <div class="space10"></div>
           <ul class="social social-mute social-s ml-auto">
