--- a/about.html
+++ b/about.html
@@ -192,7 +192,7 @@
               <form action="#" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll" class="input-group">
                   <input type="email" value="" name="EMAIL" class="email form-control mb-0 mr-2 mb-sm-0" id="mce-EMAIL" placeholder="Email Address" required>
-                  <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-rounded btn-aqua mr-0 mb-0 pull-right">Join</button>
+                  <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-rounded btn-blue mr-0 mb-0 pull-right">Join</button>
                   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                   <div style="position: absolute; left: -5000px;" aria-hidden="true">
                     <input type="text" name="b_ddc180777a163e0f9f66ee014_056957de28" tabindex="-1" value="">
